--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to write creatively</h1>
+            <h1>6 Tips for Creative Writing</h1>
 
             <hr>
             <p><b>Assembly time:</b> TBD<br>
