--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Keep a small notebook to constantly record ideas, lines, and characters.</h3>
+              <p>Inspiration comes in many places, but one of the places it never seems to come is when you sit down and tell yourself to "come up with an idea." Take the pressure off of your writing days by recording ideas all day, every day. From lines you overhear that make you laugh to sudden stories that burst into your mind, keep track of ideas throughout the day, not just when you sit at the computer. You can also use your phone to keep track of your ideas! You could type them in your notes, email them to yourself, or use an app, such as Google Docs.</p> 
             </div>
           </li>
 
