--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Try mixing and matching two ideas you've never seen before.</h3>
+              <p>There are no completely original ideas in writing -- everything builds off of other work, real life events, and new combinations of other art forms to form something "new" from the old. But this is incredibly freeing, allowing you to experiment and play with crazy new ideas and combinations to make something no one has quite seen before.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Make reading fiction a regular habit.</h3>
+              <p>Reading often can help you better understand how established writers structure their work, write good sentences, and plot out a story. You can also recognize how they use literary devices to enhance their work. This helps you become a better writer.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,8 +152,10 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Get inspiration from non-fiction sources.</h3>
+              <p>Read and watch non-fiction books and documentaries to gain real-world inspiration. Pay attention to the news, read a biography that catches your eye, and watch documentaries and series. What sorts of issues, stories, and ideas grab you? Are there perspectives that would be fun to write from, or that you've never heard from creatively? The world around you is filled with inspiration, so use it.
+Try writing from the perspective of the people you see on the news. You understand the facts of a war or struggle, but try to actually imagine living it.
+Creative writing doesn't have to be fiction. Use stories from your life that speak out to you as potentially exciting or compelling stories.</p> 
             </div>
           </li>
 
