--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Creative writing doesn't have to be fiction. Use stories from your life that spe
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Consider brainstorming with a close friend or group.</h3>
+              <p>You can toss around ideas and build on them. This isn't for every writer, but everyone should at least try group writing or brainstorming. It usually works best when someone brings an initial idea in: "what if the Terracotta warriors were really alive," allowing everyone to pitch in ideas and build on the initial idea until it's built into a story worth telling. Almost all writers enjoy having at least one person to bounce ideas off. Frequently, just vocalizing your plots or ideas can make them much clearer and easier to write.</p> 
             </div>
           </li>
 
