--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>6 Tips for Creative Writing</h1>
+            <h1>5 Tips for Creative Writing</h1>
 
             <hr>
             <p><b>Assembly time:</b> TBD<br>
               <b>Effectiveness rating:</b> 100% effective</p>
             <hr>
 
-            <p>Are you wondering how to write more creatively as a journalist? It's really fun once you learn to gather those ideas. Why don't you try to implement writing in your free-time? Follow the steps and you'll become more of a creative writer in no time!</p>
+            <p>Are you wondering how to write more creatively as a journalist? Creative writing can be challenging but rewarding. You can use it as an escape or just to write something to call your own. Why don't you try to implement writing in your free-time? Follow these steps and you'll become more of a creative writer in no time!</p>
 
           </div>
 
@@ -153,9 +153,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Get inspiration from non-fiction sources.</h3>
-              <p>Read and watch non-fiction books and documentaries to gain real-world inspiration. Pay attention to the news, read a biography that catches your eye, and watch documentaries and series. What sorts of issues, stories, and ideas grab you? Are there perspectives that would be fun to write from, or that you've never heard from creatively? The world around you is filled with inspiration, so use it.
-Try writing from the perspective of the people you see on the news. You understand the facts of a war or struggle, but try to actually imagine living it.
-Creative writing doesn't have to be fiction. Use stories from your life that speak out to you as potentially exciting or compelling stories.</p> 
+              <p>Read and watch non-fiction books and documentaries to gain real-world inspiration. Pay attention to the news, read a biography that catches your eye, and watch documentaries and series. What sorts of issues, stories, and ideas grab you? Are there perspectives that would be fun to write from, or that you've never heard from creatively? The world around you is filled with inspiration, so use it.</p> 
             </div>
           </li>
 
@@ -163,7 +161,7 @@ Creative writing doesn't have to be fiction. Use stories from your life that spe
           <li>
             <div class="content">
               <h3>Consider brainstorming with a close friend or group.</h3>
-              <p>You can toss around ideas and build on them. This isn't for every writer, but everyone should at least try group writing or brainstorming. It usually works best when someone brings an initial idea in: "what if the Terracotta warriors were really alive," allowing everyone to pitch in ideas and build on the initial idea until it's built into a story worth telling. Almost all writers enjoy having at least one person to bounce ideas off. Frequently, just vocalizing your plots or ideas can make them much clearer and easier to write.</p> 
+              <p>You can toss around ideas and build on them. This isn't for every writer, but everyone should at least try group writing or brainstorming. It usually works best when someone brings an initial idea in, which allows everyone to pitch in ideas and build on the initial idea until it's built into a story worth telling. Almost all writers enjoy having at least one person to bounce ideas off. Frequently, just vocalizing your plots or ideas can make them much clearer and easier to write.</p> 
             </div>
           </li>
 
