--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/8234/8576618657_219e8c91d0_c.jpg" ></a>
+              <a href="https://www.flickr.com/photos/chungholeung/8576618657/" title="Woman on laptop and taking notes by Chung Ho Leung, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/8234/8576618657_219e8c91d0_c.jpg" ></a>
               <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
           </li>
