--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ with a paragraph to create a photo with a caption.
               <p>Reading often can help you better understand how established writers structure their work, write good sentences, and plot out a story. You can also recognize how they use literary devices to enhance their work. This helps you become a better writer.</p>
 
 
-              <iframe width="560" height="315" src="https://youtu.be/U_d0tIugpSA?si=eBGh9WC91qHeuBV0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/U_d0tIugpSA?si=EdYImsoDusIsdEeC" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
