--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Write-Creatively#Video" title="How to write creatively: 5 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/e4TpVt" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">Chung Ho Leung from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/e4TpVt" title="Woman with notes and laptop by Chung Ho Leung, on Flickr">Chung Ho Leung from Flickr</a></p>
     </footer>
 
     <!--
