--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Effectiveness rating:</b> 100% effective</p>
             <hr>
 
-            <p>Are you wondering how to write more creatively as a journalist? Creative writing can be challenging but rewarding. You can use it as an escape or just to write something to call your own. Why don't you try to implement writing in your free-time? Follow these steps and you'll become more of a creative writer in no time!</p>
+            <p>Are you wondering how to write more creatively as a Journalist? Creative writing can be challenging, but it's also a very important skillset in Journalism. You can use it to write something to call your own, or to provide your audience with something fresh. Why don't you try to implement writing in your free-time? Follow these steps and you'll become a creative writer in no time!</p>
 
           </div>
 
