--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ Customise the visual style and appearance of your guide.
         position:relative;
         margin-bottom:40px;
         overflow:hidden;
-        background:#d9d1cc;
+        background:#000000;
       }
 
       hr {
