--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ Customise the visual style and appearance of your guide.
         top:0;
         left:-40px;
         z-index:-1;
-        background: #4d3526; 
+        background: #664733; 
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
       }
