--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ Customise the visual style and appearance of your guide.
 
       /* Hover state styles for list items inside unordered list <li> */
       ul li:hover {
-        background-color: #d9d1cc;
+        background-color: #b3a399;
       }
 
 
