--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://imgur.com/FujJNOZ"><img src="https://i.imgur.com/FujJNOZ.png" width="100" align="right" height="100" alt="HB_monogram">            
-      <h1>Hannah Banuelos's Wikihow instructions for creative writing</h1>
+      <h1>Hannah Banuelos's Wikihow Instructions for Creative Writing</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
