--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 -->
 
 
-    <title>Hannah Banuelos's Creative Writing Instruction Tips</title>
+    <title>Hannah Banuelos's Instruction Tips</title>
   <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
 </head>
   <body>
